# AdventOfCode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
2024/: CMakeLists.txt
2024/include/: Day1.hpp  Day2.hpp  Day3.hpp  Day4.hpp  Day5.hpp  Days.hpp  ISolution.hpp
2024/src/: main.cpp
2024/src/Days/: Day1.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp
include/: Day1.hpp  Day2.hpp  ISolution.hpp
src/: main.cpp
src/Day1/: Day1.cpp  Day2.cpp
